create a new file BoundedAdmittanceNoImp.h&cpp

--- a/qm_compliant/CMakeLists.txt
+++ b/qm_compliant/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(${PROJECT_NAME}
         src/Admittance.cpp
         src/BaseAdmittance.cpp
         src/BoundedAdmittanceWithK.cpp
+        src/BoundedAdmittanceNoImp.cpp
         )
 add_dependencies(${PROJECT_NAME}
         ${catkin_EXPORTED_TARGETS}
