joint2 and joint3 are admittance controled

--- a/qm_wbc/cfg/wbcWigeht.cfg
+++ b/qm_wbc/cfg/wbcWigeht.cfg
@@ -24,6 +24,12 @@ gen.add("kd_base_linear", double_t, 0, "Kd of base linear", 50, 0.0, 20000)
 gen.add("kp_base_angular", double_t, 0, "Kp of base angular", 400, 0.0, 500)
 gen.add("kd_base_angular", double_t, 0, "Kd of base angular", 140, 0.0, 500)
 
+# 纯导纳proxy 追踪
+gen.add("kp_joint2_ProxyTracking", double_t, 0, "Kp of joint2ProxyTracking", 5500, 0.0, 20000)
+gen.add("kd_joint2_ProxyTracking", double_t, 0, "Kd of joint2ProxyTracking", 100, 0.0, 20000)
+gen.add("kp_joint1_ProxyTracking", double_t, 0, "Kp of joint1ProxyTracking", 3000, 0.0, 20000)
+gen.add("kd_joint1_ProxyTracking", double_t, 0, "Kd of joint1ProxyTracking", 120, 0.0, 20000)
+
 gen.add("kp_arm_joint_1", double_t, 0, "Kp of arm linear", 4000, 0.0, 20000)
 gen.add("kp_arm_joint_2", double_t, 0, "Kd of arm linear", 4200, 0.0, 20000)
 gen.add("kp_arm_joint_3", double_t, 0, "Kp of arm angular", 4000, 0.0, 20000)
