add base pure addmittance implementation

--- a/qm_compliant/CMakeLists.txt
+++ b/qm_compliant/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(${PROJECT_NAME}
         src/BaseAdmittance.cpp
         src/BoundedAdmittanceWithK.cpp
         src/BoundedAdmittanceNoImp.cpp
+        src/BaseBoundedAdmittanceNoImp.cpp
         )
 add_dependencies(${PROJECT_NAME}
         ${catkin_EXPORTED_TARGETS}
