--- a/qm_wbc/cfg/wbcWigeht.cfg
+++ b/qm_wbc/cfg/wbcWigeht.cfg
@@ -30,6 +30,12 @@ gen.add("kd_joint2_ProxyTracking", double_t, 0, "Kd of joint2ProxyTracking", 100
 gen.add("kp_joint1_ProxyTracking", double_t, 0, "Kp of joint1ProxyTracking", 3000, 0.0, 20000)
 gen.add("kd_joint1_ProxyTracking", double_t, 0, "Kd of joint1ProxyTracking", 120, 0.0, 20000)
 
+gen.add("baseXAdmittanceKp", double_t, 0, "Kp of baseXProxyTracking", 2000, 0.0, 20000)
+gen.add("baseXAdmittanceKd", double_t, 0, "Kd of baseXProxyTracking", 50, 0.0, 20000)
+gen.add("baseYAdmittanceKp", double_t, 0, "Kp of baseYProxyTracking", 2000, 0.0, 20000)
+gen.add("baseYAdmittanceKd", double_t, 0, "Kd of baseYProxyTracking", 50, 0.0, 20000)
+
+
 gen.add("kp_arm_joint_1", double_t, 0, "Kp of arm linear", 4000, 0.0, 20000)
 gen.add("kp_arm_joint_2", double_t, 0, "Kd of arm linear", 4200, 0.0, 20000)
 gen.add("kp_arm_joint_3", double_t, 0, "Kp of arm angular", 4000, 0.0, 20000)
