--- a/qm_wbc/cfg/compliant.cfg
+++ b/qm_wbc/cfg/compliant.cfg
@@ -4,6 +4,8 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
+# controller model
+gen.add("admittance_controller_model",int_t,0,"the mode of admittance control", 1, 1, 2)
 # torque max
 gen.add("joint1_tau_max", double_t, 0, "max torque of joint1", 40, 0.0, 40)
 gen.add("joint2_tau_max", double_t, 0, "max torque of joint2", 80, 0.0, 80)
@@ -27,6 +29,23 @@ gen.add("mu", double_t, 0, "friction coefficient", 0.3, 0.0, 1)
 # gen.add("Bb1", double_t, 0, "arm's joint1 controller B", 20, 0.0, 100)
 # gen.add("Lb1", double_t, 0, "arm's joint1 controller L", 5, 0.0, 100)
 
+# 多维参数
+
+# proxy
+gen.add("Multi_M1x", double_t, 0, "multi_dimensional joint1 proxy Mx", 10, 0.0, 100)
+gen.add("Multi_D1x", double_t, 0, "multi_dimensional joint1 proxy Dx", 60, 0.0, 500)
+gen.add("Multi_K1x", double_t, 0, "multi_dimensional joint1 proxy Kx", 50, 0.0, 5000)
+
+gen.add("Multi_M2x", double_t, 0, "multi_dimensional joint2 proxy Mx", 10, 0.0, 100)
+gen.add("Multi_D2x", double_t, 0, "multi_dimensional joint2 proxy Dx", 80, 0.0, 500)
+gen.add("Multi_K2x", double_t, 0, "multi_dimensional joint2 proxy Kx", 50, 0.0, 5000)
+
+# 滑模变量
+gen.add("SM_lambda", double_t, 0, "sliding mode param lambda", 10, 0.0, 200)
+gen.add("SM_k_1", double_t, 0, "sliding mode param k_1", 30, 0.0, 200)
+
+
+# 单维参数
 # joint 1 proxy
 gen.add("M1x", double_t, 0, "arm's joint1 proxy Mx", 10, 0.0, 100)
 gen.add("D1x", double_t, 0, "arm's joint1 proxy Dx", 60, 0.0, 500)
