--- a/qm_wbc/cfg/wbcWigeht.cfg
+++ b/qm_wbc/cfg/wbcWigeht.cfg
@@ -35,6 +35,12 @@ gen.add("baseXAdmittanceKd", double_t, 0, "Kd of baseXProxyTracking", 50, 0.0, 2
 gen.add("baseYAdmittanceKp", double_t, 0, "Kp of baseYProxyTracking", 2000, 0.0, 20000)
 gen.add("baseYAdmittanceKd", double_t, 0, "Kd of baseYProxyTracking", 50, 0.0, 20000)
 
+# 多维纯导纳porxy追踪
+gen.add("kp_joint2_MultiProxyTracking", double_t, 0, "Kp of Mulit_joint2ProxyTracking", 5500, 0.0, 20000)
+gen.add("kd_joint2_MultiProxyTracking", double_t, 0, "Kd of Mulit_joint2ProxyTracking", 100, 0.0, 20000)
+gen.add("kp_joint1_MultiProxyTracking", double_t, 0, "Kp of Mulit_joint1ProxyTracking", 3000, 0.0, 20000)
+gen.add("kd_joint1_MultiProxyTracking", double_t, 0, "Kd of Mulit_joint1ProxyTracking", 120, 0.0, 20000)
+
 
 gen.add("kp_arm_joint_1", double_t, 0, "Kp of arm linear", 4000, 0.0, 20000)
 gen.add("kp_arm_joint_2", double_t, 0, "Kd of arm linear", 4200, 0.0, 20000)
@@ -42,6 +48,8 @@ gen.add("kp_arm_joint_3", double_t, 0, "Kp of arm angular", 4000, 0.0, 20000)
 gen.add("kp_arm_joint_4", double_t, 0, "Kd of arm angular", 4000, 0.0, 20000)
 gen.add("kp_arm_joint_5", double_t, 0, "Kp of arm angular", 4200, 0.0, 20000)
 gen.add("kp_arm_joint_6", double_t, 0, "Kd of arm angular", 6000.0, 0.0, 20000)
+
+
 
 gen.add("kd_arm_joint_1", double_t, 0, "Kp of arm linear", 75, 0.0, 20000)
 gen.add("kd_arm_joint_2", double_t, 0, "Kd of arm linear", 75, 0.0, 20000)
